--- a/src/components/layer-menu/shadowdom-styles.css
+++ b/src/components/layer-menu/shadowdom-styles.css
@@ -12,29 +12,15 @@
  * http://polymer.github.io/PATENTS.txt
  */
 
-import { hookup } from "actor-helpers/lib/actor/Actor.js";
-
-import { UIActor } from "./actors/ui.js";
-import { AppState } from "./model/state.js";
-
-import { RouterActor } from "./actors/router.js";
-
-declare var Worker: {
-  new (url: URL | string, options?: { type: string }): Worker;
-};
-
-declare global {
-  interface ActorMessageType {
-    ui: AppState;
-    router: never;
-  }
+:host {
+  display: grid;
+  overflow: hidden;
 }
-
-new Worker("state-worker.js", { type: "module" });
-
-async function bootstrap() {
-  hookup("ui", new UIActor());
-  hookup("router", new RouterActor());
+#top {
+  will-change: transform;
+  z-index: 2;
+  grid-area: 1/1;
 }
-
-bootstrap();
+::slotted(*) {
+  grid-area: 1/1;
+}
